# smart-git

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  api.go  clone.go  db.go  ghttp.go  ghttp_integration_test.go  ghttp_test.go  git_behavior_test.go  go.mod  go.sum  http.go  inforefs.go  main.go  run_tests.sh  svcrpc.go  svcrpc_test.go
.github/workflows/: build-dev.yml  build.yml  ci.yml  release-go.yml  release-rust.yml  release.yml
config/: config.go  config.toml
database/: database.go
database/bolt/: bolt.go  codec.go  data.go  sum.go
database/schema/: schema.go
docker/compose/: docker-compose-rs.yml  docker-compose.yml
docker/dockerfile/dev/: Dockerfile  init.sh
docker/dockerfile/release/: Dockerfile  init.sh
docs/: config.md  install.md  rust-rewrite.md
gitc/: clone.go  db.go
middleware/loggin/: loggin.go
middleware/timing/: timing.go
smart-git-rs/: Cargo.toml  Dockerfile  config.toml  config.wanf
smart-git-rs/src/: app.rs  config.rs  db.rs  lifecycle.rs  main.rs  model.rs  repo_id.rs
smart-git-rs/src/git/: mirror.rs  mod.rs
smart-git-rs/src/http/: admin.rs  admin_tests.rs  git_http.rs  mod.rs  wanf.rs
