[package]
name = "smart-git-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
git-server-core = { path = "../../../WJQSERVER/git-server/crates/git-server-core" }
git-server-http = { path = "../../../WJQSERVER/git-server/crates/git-server-http" }
gix = { version = "0.80.0", features = ["blocking-network-client"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-util = "0.7"
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wanf-rs = { path = "../../../WJQSERVER/wanf-rs" }
