[package]
name = "smart-git-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8.8", features = ["macros"] }
clap = { version = "4.6.0", features = ["derive"] }
gitserver-core = "0.0.1"
gitserver-http = "0.0.1"
gix = { version = "0.81.0", features = ["blocking-network-client"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.51.0", features = ["macros", "net", "rt-multi-thread", "signal"] }
tokio-util = "0.7.18"
time = { version = "0.3", features = ["formatting"] }
toml = "1.1.2"
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
wanf = "0.0.1"
